# pyplayground

./: .gitignore
browser-use/: main.py  requirements.txt
deepagents/: README.md  interrupt_deepagent.py  mcp_integration_example.py  requirements.txt  sandbox_mcp_deepagent.py
docling/: main.py
playwright/: README.md  example.html  run_example.py
vector_db/: agent.py  docling_pdf_extractor.py  indexer_chroma.py  indexer_core.py  indexer_qdrant.py  justfile  pyproject.toml  rag_agent_tools.py  requirements.txt  test.sh
vectorless_db/: agent.py  justfile  pyproject.toml  run_pageindex.py
